Complete sorting and search with basic functionalities and also update APIs
